# spm

./: .gitignore  CMakeLists.txt  LICENCE  README  README.md  packages.txt  run  spm.sh
assets/: list.txt
data/: check.sh  fakeprofile.txt  projection.cpp  rating.cpp
database/: backup.sql  ddl.sql  snooker.db
doc/: TASKS.org  background_subtraction.md  color_in_range_hsv.md  include_template.txt  kalman_filter.md  list.txt  object_tracking.md  particle_filter.md  statistics.txt  usage.txt
doc/json/: data.txt  js_parser.py
forms/: mainwindow.ui
include/: .detectshot.hpp.swp  ballDetect.h  buildprofile.hpp  collisionDetector.hpp  database.hpp  detectball.hpp  detectshot.hpp  gui.hpp  list.txt  mainwindow.h  managelogin.hpp  roi.hpp  sclassifier.hpp  shot.hpp  shotArray.hpp  snCore.hpp  snReader.hpp
media/: shots.rar
src/: .buildprofile.cpp.swp  .detectshot.cpp.swp  ballDetect.cpp  buildprofile.cpp  buildprofile_backup.cpp  collisionDetector.cpp  database.cpp  detectball.cpp  detectshot.cpp  gui.cpp  list.txt  main.cpp  main_backup.txt  mainwindow.cpp  managelogin.cpp  roi.cpp  sclassifier.cpp  shot.cpp  shotArray.cpp  snBgsub.cpp  snCore.cpp  snKalman.cpp  snMain.cpp
temp/: README.md  cvimagewidget.h  main.cpp  temp.pro
test/: test.cpp
